# openclaw-role-pack-hub

./: PROJECT_STATUS.md  README.md  ROADMAP.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: role-pack.md
demo/: README.md  run_demo.sh  validate-all.txt
packs/security-basic/: pack.json
packs/security-basic/roles/: mitigation-planner.md  threat-modeler.md
packs/startup-basic/: pack.json
packs/startup-basic/roles/: analyst.md  builder.md
rolepackhub/: cli.py
schemas/: role-pack.schema.json
tests/: test_validate.py
tools/: validate_pack.py
