[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-role-pack-hub"
version = "0.3.0"
description = "Role pack hub and validator for OpenClaw workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
rolepackhub = "rolepackhub.cli:main"
